--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,7 @@
 /deps
 /*.ez
 
-.idea
-*.iml
-
-# Generate on crash by the VM
+# Generated on crash by the VM
 erl_crash.dump
 
 # Static artifacts
@@ -25,4 +22,3 @@ erl_crash.dump
 # secrets file as long as you replace its contents by environment
 # variables.
 /config/prod.secret.exs
-.vagrant
